recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:11: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:13: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:15: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:17: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:19: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:21: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^HexaKoch:23: error: not found: value hexaKock
    hexaKock(levels-1, length*coef);
    ^